solve problem with nav-bar on mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,7 +432,7 @@ footer {
         color: #fff;
         font-size: 20px;
         text-decoration: none;
-        padding: 10px;
+        padding: 8px;
         display: inline;
         float: right;
         text-align: right;
